# wgui

./: README.md  build_windows.sh  pyproject.toml
src/: main.py
src/backend/: backup.py  profiles.py  settings.py  wireguard.py
src/ui/: dialogs.py  main_window.py  tray.py
src/utils/: i18n.py  icons.py  paths.py
tests/: test_backend.py  test_features.py  test_ui.py
