[project]
name = "wireguard-gui"
version = "0.1.0"
description = "A modern, beautiful, cross-platform WireGuard GUI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.5.0",
    "platformdirs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
